db-cluster/users/k8s-cluster2/ns-sorn-sophamarinet-c2332eff/netdemo/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: netdemo-tcp
  namespace: ns-sorn-sophamarinet-c2332eff
spec:
  entryPoints:
  - postgresql
  routes:
  - match: HostSNI(`netdemo.seang.shop`)
    services:
    - name: netdemo-postgresql-pooler-rw
      port: 5432
  tls:
    passthrough: true
